--- a/Agra/public/tasks.css
+++ b/Agra/public/tasks.css
@@ -28,7 +28,7 @@
 
 .info-bar{
     width: 100%;
-    height: 75px;
+    height: 100%;
     background-color: #004AA0;
     color: white;
     border-radius: 20px;
@@ -46,29 +46,14 @@
 
 .pb{
     text-align: center;
-    padding: 6px;
+    padding: 10px;
 }
 
-.progress-bar{
-    border: 1px solid white;
-    border-radius: 3rem;
-    width: 17rem;
-    height: 2rem;
-    position: relative;
-}
-.progress-barc{
-    border: 1px solid white;
-    border-radius: 3rem;
-    height: 2rem;
-    position: absolute;
-    background-color: greenyellow;
-    font-size: 25px;
-    color: black;
-}
+
 
 
 a{
-    color: white;
+    
     font-weight: 300;
     font-size: 20px;
     letter-spacing: 0;
@@ -82,45 +67,36 @@ a{
 
 .instrucContainer{
     width: 100%;
-    height: 40%;
+    height: 20%;
 }
 
 /*Instructions Teacher*/
 .instructions{
     height: 100%;
-    background-color: #004AA0;
     color: black;
     font-weight: 300;
     font-size: 20px;
     border-radius: 20px;
     box-sizing: border-box;
-    grid-row-start: 2;
-    grid-row-end: 7;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin-left: auto;
-    margin-right: auto;
-
-    display: grid;
-    grid-template-rows: 35px repeat(6, 1fr);
-    grid-template-columns: repeat(1, 1fr);
     gap: 5px;
     overflow: auto;
     padding: 10px;
-    box-shadow: 3px 3px 3px 3px #001f42;
+    display: flex;
+    flex-direction: column;
+    padding-left: 70px;
 }
 
 
 .instruc-container{
     width: 90%;
     font-size: 16px;
-    border: black solid 1px;
+    
     margin: 10px auto;
     display: flex;
 
 }
 .instrucName{
-    color: white;
+    color: black;
 }
 
 
