--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -898,8 +898,6 @@ video {
   left: 50%;
 }.right-0 {
   right: 0px;
-}.right-4 {
-  right: 1rem;
 }.start-0 {
   inset-inline-start: 0px;
 }.start-full {
@@ -989,6 +987,9 @@ video {
 }.my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}.-my-1 {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
 }.-mb-4 {
   margin-bottom: -1rem;
 }.-mb-px {
@@ -1093,6 +1094,8 @@ video {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
+}.-me-2 {
+  margin-inline-end: -0.5rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1297,6 +1300,12 @@ video {
   min-width: 2rem;
 }.min-w-full {
   min-width: 100%;
+}.min-w-\[theme\(spacing\.4\)\] {
+  min-width: 1rem;
+}.min-w-\[theme\(spacing\.5\)\] {
+  min-width: 1.25rem;
+}.min-w-\[theme\(spacing\.6\)\] {
+  min-width: 1.5rem;
 }.max-w-2xl {
   max-width: 42rem;
 }.max-w-3xl {
@@ -1697,6 +1706,9 @@ video {
 }.border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
+}.border-x-\[0\.5px\] {
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
 }.\!border-t-0 {
   border-top-width: 0px !important;
 }.border-b {
@@ -1940,6 +1952,15 @@ video {
 }.py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}.px-0\.5 {
+  padding-left: 0.125rem;
+  padding-right: 0.125rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
 }.pb-14 {
@@ -2111,6 +2132,8 @@ video {
   letter-spacing: 0.05em;
 }.tracking-widest {
   letter-spacing: 0.1em;
+}.tracking-tighter {
+  letter-spacing: -0.05em;
 }.text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -2180,6 +2203,8 @@ video {
 }.text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(114 59 19 / var(--tw-text-opacity));
+}.text-gray-700\/50 {
+  color: rgb(55 65 81 / 0.5);
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -2236,6 +2261,8 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(8px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}.ring-inset {
+  --tw-ring-inset: inset;
 }.ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
@@ -2251,6 +2278,8 @@ video {
 }.ring-white {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+}.ring-gray-600\/10 {
+  --tw-ring-color: rgb(75 85 99 / 0.1);
 }.ring-opacity-5 {
   --tw-ring-opacity: 0.05;
 }.blur {
@@ -2333,6 +2362,10 @@ video {
   width: 0.125rem;
 }.first\:border-t-0:first-child {
   border-top-width: 0px;
+}.first\:border-s-0:first-child {
+  border-inline-start-width: 0px;
+}.last\:border-e-0:last-child {
+  border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
 }.last-of-type\:pe-1:last-of-type {
@@ -2437,6 +2470,8 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.hover\:text-gray-700\/75:hover {
+  color: rgb(55 65 81 / 0.75);
 }.hover\:underline:hover {
   text-decoration-line: underline;
 }.hover\:grayscale-0:hover {
@@ -2524,6 +2559,8 @@ video {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
+}.focus-visible\:z-10:focus-visible {
+  z-index: 10;
 }.focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2533,6 +2570,8 @@ video {
 }.focus-visible\:text-gray-500:focus-visible {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}.focus-visible\:text-gray-700\/75:focus-visible {
+  color: rgb(55 65 81 / 0.75);
 }.focus-visible\:outline-none:focus-visible {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2593,6 +2632,12 @@ video {
 }.disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.group\/item:first-child .group-first\/item\:rounded-s-lg {
+  border-start-start-radius: 0.5rem;
+  border-end-start-radius: 0.5rem;
+}.group\/item:last-child .group-last\/item\:rounded-e-lg {
+  border-start-end-radius: 0.5rem;
+  border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }.group:hover .group-hover\:text-blue-800 {
@@ -2610,6 +2655,9 @@ video {
 }.group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.group\/button:hover .group-hover\/button\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group\/item:hover .group-hover\/item\:underline {
   text-decoration-line: underline;
 }.group\/link:hover .group-hover\/link\:underline {
@@ -2723,6 +2771,8 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }.dark\:bg-white\/5:is(.dark *) {
   background-color: rgb(255 255 255 / 0.05);
+}.dark\:bg-gray-400\/10:is(.dark *) {
+  background-color: rgb(156 163 175 / 0.1);
 }.dark\:fill-current:is(.dark *) {
   fill: currentColor;
 }.dark\:text-blue-300:is(.dark *) {
@@ -2773,6 +2823,8 @@ video {
 }.dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.dark\:text-gray-300\/50:is(.dark *) {
+  color: rgb(209 213 219 / 0.5);
 }.dark\:shadow-gray-800:is(.dark *) {
   --tw-shadow-color: #1F2937;
   --tw-shadow: var(--tw-shadow-colored);
@@ -2788,6 +2840,8 @@ video {
   --tw-ring-color: rgb(255 255 255 / 0.1);
 }.dark\:ring-white\/20:is(.dark *) {
   --tw-ring-color: rgb(255 255 255 / 0.2);
+}.dark\:ring-gray-400\/20:is(.dark *) {
+  --tw-ring-color: rgb(156 163 175 / 0.2);
 }.dark\:placeholder\:text-gray-500:is(.dark *)::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2843,6 +2897,8 @@ video {
 }.dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.dark\:hover\:text-gray-300\/75:hover:is(.dark *) {
+  color: rgb(209 213 219 / 0.75);
 }.dark\:hover\:ring-white\/20:hover:is(.dark *) {
   --tw-ring-color: rgb(255 255 255 / 0.2);
 }.dark\:focus\:border-blue-700:focus:is(.dark *) {
@@ -2909,6 +2965,8 @@ video {
 }.dark\:focus-visible\:text-gray-400:focus-visible:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.dark\:focus-visible\:text-gray-300\/75:focus-visible:is(.dark *) {
+  color: rgb(209 213 219 / 0.75);
 }.dark\:active\:bg-gray-300:active:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -2945,6 +3003,9 @@ video {
 }.group:hover .dark\:group-hover\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:focus .dark\:group-focus\:ring-gray-800\/70:is(.dark *) {
   --tw-ring-color: rgb(31 41 55 / 0.7);
 }.group:focus-visible .dark\:group-focus-visible\:text-gray-200:is(.dark *) {
