--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -968,6 +968,9 @@ video {
 }.-mx-4 {
   margin-left: -1rem;
   margin-right: -1rem;
+}.-my-1 {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
 }.mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -989,13 +992,16 @@ video {
 }.my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}.-my-1 {
-  margin-top: -0.25rem;
-  margin-bottom: -0.25rem;
 }.-mb-4 {
   margin-bottom: -1rem;
 }.-mb-px {
   margin-bottom: -1px;
+}.-me-0 {
+  margin-inline-end: -0px;
+}.-me-0\.5 {
+  margin-inline-end: -0.125rem;
+}.-me-2 {
+  margin-inline-end: -0.5rem;
 }.-ml-px {
   margin-left: -1px;
 }.-ms-1 {
@@ -1096,13 +1102,6 @@ video {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
-<<<<<<< Updated upstream
-}.-me-2 {
-  margin-inline-end: -0.5rem;
-=======
-}.mb-\[5rem\] {
-  margin-bottom: 5rem;
->>>>>>> Stashed changes
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1192,10 +1191,14 @@ video {
   height: 100dvh;
 }.h-\[100rem\] {
   height: 100rem;
+}.h-\[20rem\] {
+  height: 20rem;
 }.h-\[270px\] {
   height: 270px;
 }.h-\[30rem\] {
   height: 30rem;
+}.h-\[48rem\] {
+  height: 48rem;
 }.h-\[50rem\] {
   height: 50rem;
 }.h-\[75px\] {
@@ -1216,6 +1219,8 @@ video {
   max-height: 100%;
 }.min-h-10 {
   min-height: 2.5rem;
+}.min-h-\[50px\] {
+  min-height: 50px;
 }.min-h-\[theme\(spacing\.48\)\] {
   min-height: 12rem;
 }.min-h-full {
@@ -1250,8 +1255,6 @@ video {
   width: 40%;
 }.w-20 {
   width: 5rem;
-}.w-24 {
-  width: 6rem;
 }.w-3 {
   width: 0.75rem;
 }.w-3\.5 {
@@ -1272,8 +1275,6 @@ video {
   width: 12rem;
 }.w-5 {
   width: 1.25rem;
-}.w-5\/6 {
-  width: 83.333333%;
 }.w-6 {
   width: 1.5rem;
 }.w-64 {
@@ -1304,6 +1305,9 @@ video {
   width: calc(100% + 2rem);
 }.w-auto {
   width: auto;
+}.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }.w-full {
   width: 100%;
 }.w-max {
@@ -1315,16 +1319,16 @@ video {
   width: 100vw;
 }.min-w-0 {
   min-width: 0px;
-}.min-w-\[theme\(spacing\.8\)\] {
-  min-width: 2rem;
-}.min-w-full {
-  min-width: 100%;
 }.min-w-\[theme\(spacing\.4\)\] {
   min-width: 1rem;
 }.min-w-\[theme\(spacing\.5\)\] {
   min-width: 1.25rem;
 }.min-w-\[theme\(spacing\.6\)\] {
   min-width: 1.5rem;
+}.min-w-\[theme\(spacing\.8\)\] {
+  min-width: 2rem;
+}.min-w-full {
+  min-width: 100%;
 }.max-w-2xl {
   max-width: 42rem;
 }.max-w-3xl {
@@ -1435,9 +1439,17 @@ video {
 }.rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.scale-100 {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.scale-150 {
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.scale-95 {
   --tw-scale-x: .95;
@@ -1683,6 +1695,8 @@ video {
   border-radius: 0.5rem;
 }.rounded-md {
   border-radius: 0.375rem;
+}.rounded-sm {
+  border-radius: 0.125rem;
 }.rounded-xl {
   border-radius: 0.75rem;
 }.rounded-b {
@@ -1722,6 +1736,9 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
+}.border-x-\[0\.5px\] {
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
 }.border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1743,6 +1760,8 @@ video {
   border-inline-start-width: 1px;
 }.border-t {
   border-top-width: 1px;
+}.border-t-0 {
+  border-top-width: 0px;
 }.\!border-none {
   border-style: none !important;
 }.border-none {
@@ -1844,6 +1863,9 @@ video {
 }.bg-purple-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(237 235 254 / var(--tw-bg-opacity));
+}.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 232 232 / var(--tw-bg-opacity));
 }.bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(224 36 36 / var(--tw-bg-opacity));
@@ -1905,9 +1927,18 @@ video {
   padding: 1.5rem;
 }.p-8 {
   padding: 2rem;
+}.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}.px-0\.5 {
+  padding-left: 0.125rem;
+  padding-right: 0.125rem;
 }.px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
 }.px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1968,15 +1999,6 @@ video {
 }.py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}.px-0\.5 {
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
-}.px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
 }.pb-14 {
@@ -2146,18 +2168,21 @@ video {
   line-height: 1.625;
 }.tracking-tight {
   letter-spacing: -0.025em;
+}.tracking-tighter {
+  letter-spacing: -0.05em;
 }.tracking-wider {
   letter-spacing: 0.05em;
 }.tracking-widest {
   letter-spacing: 0.1em;
-}.tracking-tighter {
-  letter-spacing: -0.05em;
 }.text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }.text-blue-100 {
   --tw-text-opacity: 1;
   color: rgb(225 239 254 / var(--tw-text-opacity));
+}.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(63 131 248 / var(--tw-text-opacity));
 }.text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -2167,6 +2192,9 @@ video {
 }.text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
+}.text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(35 56 118 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -2185,6 +2213,8 @@ video {
 }.text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}.text-gray-700\/50 {
+  color: rgb(55 65 81 / 0.5);
 }.text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -2221,8 +2251,6 @@ video {
 }.text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(114 59 19 / var(--tw-text-opacity));
-}.text-gray-700\/50 {
-  color: rgb(55 65 81 / 0.5);
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -2287,6 +2315,8 @@ video {
 }.ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}.ring-gray-600\/10 {
+  --tw-ring-color: rgb(75 85 99 / 0.1);
 }.ring-gray-900\/10 {
   --tw-ring-color: rgb(17 24 39 / 0.1);
 }.ring-gray-950\/10 {
@@ -2296,8 +2326,6 @@ video {
 }.ring-white {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
-}.ring-gray-600\/10 {
-  --tw-ring-color: rgb(75 85 99 / 0.1);
 }.ring-opacity-5 {
   --tw-ring-opacity: 0.05;
 }.blur {
@@ -2378,8 +2406,12 @@ video {
 }.before\:w-0\.5::before {
   content: var(--tw-content);
   width: 0.125rem;
+}.first\:border-s-0:first-child {
+  border-inline-start-width: 0px;
 }.first\:border-t-0:first-child {
   border-top-width: 0px;
+}.last\:border-e-0:last-child {
+  border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
 }.last-of-type\:pe-1:last-of-type {
@@ -2413,6 +2445,9 @@ video {
 }.hover\:bg-blue-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(164 202 254 / var(--tw-bg-opacity));
+}.hover\:bg-blue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
 }.hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
@@ -2475,6 +2510,8 @@ video {
 }.hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}.hover\:text-gray-700\/75:hover {
+  color: rgb(55 65 81 / 0.75);
 }.hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -2484,8 +2521,6 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.hover\:text-gray-700\/75:hover {
-  color: rgb(55 65 81 / 0.75);
 }.hover\:underline:hover {
   text-decoration-line: underline;
 }.hover\:opacity-50:hover {
@@ -2550,6 +2585,9 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}.focus\:ring-blue-100:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(225 239 254 / var(--tw-ring-opacity));
 }.focus\:ring-blue-300:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(164 202 254 / var(--tw-ring-opacity));
@@ -2575,6 +2613,8 @@ video {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
+}.focus-visible\:z-10:focus-visible {
+  z-index: 10;
 }.focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2646,8 +2686,17 @@ video {
 }.disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.group\/item:first-child .group-first\/item\:rounded-s-lg {
+  border-start-start-radius: 0.5rem;
+  border-end-start-radius: 0.5rem;
+}.group\/item:last-child .group-last\/item\:rounded-e-lg {
+  border-start-end-radius: 0.5rem;
+  border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}.group\/button:hover .group-hover\/button\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
@@ -2738,6 +2787,8 @@ video {
 }.dark\:bg-gray-200:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}.dark\:bg-gray-400\/10:is(.dark *) {
+  background-color: rgb(156 163 175 / 0.1);
 }.dark\:bg-gray-500:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
@@ -2776,8 +2827,6 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }.dark\:bg-white\/5:is(.dark *) {
   background-color: rgb(255 255 255 / 0.05);
-}.dark\:bg-gray-400\/10:is(.dark *) {
-  background-color: rgb(156 163 175 / 0.1);
 }.dark\:fill-current:is(.dark *) {
   fill: currentColor;
 }.dark\:text-blue-300:is(.dark *) {
@@ -2798,6 +2847,8 @@ video {
 }.dark\:text-gray-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}.dark\:text-gray-300\/50:is(.dark *) {
+  color: rgb(209 213 219 / 0.5);
 }.dark\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2828,11 +2879,11 @@ video {
 }.dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.dark\:text-gray-300\/50:is(.dark *) {
-  color: rgb(209 213 219 / 0.5);
 }.dark\:shadow-gray-800:is(.dark *) {
   --tw-shadow-color: #1F2937;
   --tw-shadow: var(--tw-shadow-colored);
+}.dark\:ring-gray-400\/20:is(.dark *) {
+  --tw-ring-color: rgb(156 163 175 / 0.2);
 }.dark\:ring-gray-50\/10:is(.dark *) {
   --tw-ring-color: rgb(249 250 251 / 0.1);
 }.dark\:ring-gray-700:is(.dark *) {
@@ -2845,8 +2896,6 @@ video {
   --tw-ring-color: rgb(255 255 255 / 0.1);
 }.dark\:ring-white\/20:is(.dark *) {
   --tw-ring-color: rgb(255 255 255 / 0.2);
-}.dark\:ring-gray-400\/20:is(.dark *) {
-  --tw-ring-color: rgb(156 163 175 / 0.2);
 }.dark\:placeholder\:text-gray-500:is(.dark *)::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2865,6 +2914,9 @@ video {
 }.dark\:hover\:bg-blue-700:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
+}.dark\:hover\:bg-blue-800:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 66 159 / var(--tw-bg-opacity));
 }.dark\:hover\:bg-gray-600:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -2896,14 +2948,14 @@ video {
 }.dark\:hover\:text-gray-300:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}.dark\:hover\:text-gray-300\/75:hover:is(.dark *) {
+  color: rgb(209 213 219 / 0.75);
 }.dark\:hover\:text-gray-400:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }.dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.dark\:hover\:text-gray-300\/75:hover:is(.dark *) {
-  color: rgb(209 213 219 / 0.75);
 }.dark\:hover\:ring-white\/20:hover:is(.dark *) {
   --tw-ring-color: rgb(255 255 255 / 0.2);
 }.dark\:focus\:border-blue-700:focus:is(.dark *) {
@@ -2957,6 +3009,9 @@ video {
 }.dark\:focus\:ring-gray-700:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(55 65 81 / var(--tw-ring-opacity));
+}.dark\:focus\:ring-gray-800:focus:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(31 41 55 / var(--tw-ring-opacity));
 }.dark\:focus\:ring-green-800:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(3 84 63 / var(--tw-ring-opacity));
@@ -2967,11 +3022,11 @@ video {
   --tw-ring-offset-color: #1F2937;
 }.dark\:focus-visible\:bg-white\/5:focus-visible:is(.dark *) {
   background-color: rgb(255 255 255 / 0.05);
+}.dark\:focus-visible\:text-gray-300\/75:focus-visible:is(.dark *) {
+  color: rgb(209 213 219 / 0.75);
 }.dark\:focus-visible\:text-gray-400:focus-visible:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.dark\:focus-visible\:text-gray-300\/75:focus-visible:is(.dark *) {
-  color: rgb(209 213 219 / 0.75);
 }.dark\:active\:bg-gray-300:active:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -2999,6 +3054,9 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
+}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -3355,18 +3413,6 @@ video {
     margin-inline-end: 0px;
   }
 
-  .md\:mr-4 {
-    margin-right: 1rem;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
   .md\:table-cell {
     display: table-cell;
   }
@@ -3383,10 +3429,6 @@ video {
     height: 10rem;
   }
 
-  .md\:h-48 {
-    height: 12rem;
-  }
-
   .md\:h-\[35rem\] {
     height: 35rem;
   }
@@ -3397,10 +3439,6 @@ video {
 
   .md\:w-1\/4 {
     width: 25%;
-  }
-
-  .md\:w-1\/6 {
-    width: 16.666667%;
   }
 
   .md\:w-2\/4 {
@@ -3417,10 +3455,6 @@ video {
 
   .md\:w-80 {
     width: 20rem;
-  }
-
-  .md\:w-\[600px\] {
-    width: 600px;
   }
 
   .md\:w-\[900px\] {
@@ -3452,10 +3486,6 @@ video {
     flex-direction: row;
   }
 
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
   .md\:items-center {
     align-items: center;
   }
@@ -3466,10 +3496,6 @@ video {
 
   .md\:justify-end {
     justify-content: flex-end;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between;
   }
 
   .md\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
@@ -3563,10 +3589,6 @@ video {
 
   .lg\:h-full {
     height: 100%;
-  }
-
-  .lg\:w-\[900px\] {
-    width: 900px;
   }
 
   .lg\:max-w-xl {
@@ -3729,10 +3751,6 @@ video {
     width: 20rem;
   }
 
-  .xl\:w-\[1100px\] {
-    width: 1100px;
-  }
-
   .xl\:w-full {
     width: 100%;
   }
@@ -3752,6 +3770,10 @@ video {
 
   .xl\:gap-10 {
     gap: 2.5rem;
+  }
+
+  .xl\:overflow-hidden {
+    overflow: hidden;
   }
 
   .xl\:p-10 {
