added export csv to scores in section

--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -864,6 +864,8 @@ video {
   bottom: -50%;
 }.-start-3 {
   inset-inline-start: -0.75rem;
+}.-top-1 {
+  top: -0.25rem;
 }.-top-1\/2 {
   top: -50%;
 }.bottom-0 {
@@ -896,14 +898,14 @@ video {
   left: 50%;
 }.right-0 {
   right: 0px;
+}.right-4 {
+  right: 1rem;
 }.start-0 {
   inset-inline-start: 0px;
 }.start-full {
   inset-inline-start: 100%;
 }.top-0 {
   top: 0px;
-}.top-1 {
-  top: 0.25rem;
 }.top-1\/2 {
   top: 50%;
 }.top-2 {
@@ -930,8 +932,6 @@ video {
   z-index: 50;
 }.z-\[1\] {
   z-index: 1;
-}.order-first {
-  order: -9999;
 }.col-\[--col-span-default\] {
   grid-column: var(--col-span-default);
 }.col-span-full {
@@ -992,17 +992,17 @@ video {
 }.my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}.-mx-6 {
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
 }.-mb-4 {
   margin-bottom: -1rem;
 }.-mb-px {
   margin-bottom: -1px;
-<<<<<<< Updated upstream
 }.-me-0 {
   margin-inline-end: -0px;
 }.-me-0\.5 {
   margin-inline-end: -0.125rem;
-=======
->>>>>>> Stashed changes
 }.-me-2 {
   margin-inline-end: -0.5rem;
 }.-ml-px {
@@ -1033,6 +1033,8 @@ video {
   margin-bottom: 1.5rem;
 }.mb-8 {
   margin-bottom: 2rem;
+}.mb-\[5rem\] {
+  margin-bottom: 5rem;
 }.me-1 {
   margin-inline-end: 0.25rem;
 }.me-1\.5 {
@@ -1105,6 +1107,12 @@ video {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
+}.-ms-2 {
+  margin-inline-start: -0.5rem;
+}.-mb-6 {
+  margin-bottom: -1.5rem;
+}.-mt-6 {
+  margin-top: -1.5rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1332,33 +1340,6 @@ video {
   min-width: 2rem;
 }.min-w-full {
   min-width: 100%;
-<<<<<<< Updated upstream
-=======
-}.\!max-w-2xl {
-  max-width: 42rem !important;
-}.\!max-w-3xl {
-  max-width: 48rem !important;
-}.\!max-w-4xl {
-  max-width: 56rem !important;
-}.\!max-w-5xl {
-  max-width: 64rem !important;
-}.\!max-w-6xl {
-  max-width: 72rem !important;
-}.\!max-w-7xl {
-  max-width: 80rem !important;
-}.\!max-w-\[14rem\] {
-  max-width: 14rem !important;
-}.\!max-w-lg {
-  max-width: 32rem !important;
-}.\!max-w-md {
-  max-width: 28rem !important;
-}.\!max-w-sm {
-  max-width: 24rem !important;
-}.\!max-w-xl {
-  max-width: 36rem !important;
-}.\!max-w-xs {
-  max-width: 20rem !important;
->>>>>>> Stashed changes
 }.max-w-2xl {
   max-width: 42rem;
 }.max-w-3xl {
@@ -1371,6 +1352,8 @@ video {
   max-width: 72rem;
 }.max-w-7xl {
   max-width: 80rem;
+}.max-w-\[14rem\] {
+  max-width: 14rem;
 }.max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
@@ -1425,9 +1408,6 @@ video {
 }.-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.-translate-x-1\/4 {
-  --tw-translate-x: -25%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-x-12 {
   --tw-translate-x: -3rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1439,9 +1419,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-y-12 {
   --tw-translate-y: -3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.-translate-y-3\/4 {
-  --tw-translate-y: -75%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-y-full {
   --tw-translate-y: -100%;
@@ -1517,10 +1494,10 @@ video {
   cursor: pointer;
 }.cursor-wait {
   cursor: wait;
-}.select-all {
-  -webkit-user-select: all;
-     -moz-user-select: all;
-          user-select: all;
+}.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }.resize-none {
   resize: none;
 }.resize {
@@ -1719,6 +1696,8 @@ video {
   white-space: normal;
 }.whitespace-nowrap {
   white-space: nowrap;
+}.break-words {
+  overflow-wrap: break-word;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-\[20px\] {
@@ -1770,9 +1749,6 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
-}.border-x-\[0\.5px\] {
-  border-left-width: 0.5px;
-  border-right-width: 0.5px;
 }.border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1919,8 +1895,6 @@ video {
 }.bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 246 178 / var(--tw-bg-opacity));
-}.\!bg-none {
-  background-image: none !important;
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }.from-blue-800 {
@@ -2348,9 +2322,6 @@ video {
 }.ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
-}.ring-blue-300 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(164 202 254 / var(--tw-ring-opacity));
 }.ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
@@ -2439,18 +2410,17 @@ video {
 }.before\:start-0::before {
   content: var(--tw-content);
   inset-inline-start: 0px;
+}.before\:h-full::before {
+  content: var(--tw-content);
+  height: 100%;
 }.before\:w-0::before {
   content: var(--tw-content);
   width: 0px;
 }.before\:w-0\.5::before {
   content: var(--tw-content);
   width: 0.125rem;
-}.first\:border-s-0:first-child {
-  border-inline-start-width: 0px;
 }.first\:border-t-0:first-child {
   border-top-width: 0px;
-}.last\:border-e-0:last-child {
-  border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
 }.last-of-type\:pe-1:last-of-type {
@@ -2652,8 +2622,6 @@ video {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
-}.focus-visible\:z-10:focus-visible {
-  z-index: 10;
 }.focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2725,17 +2693,8 @@ video {
 }.disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.group\/item:first-child .group-first\/item\:rounded-s-lg {
-  border-start-start-radius: 0.5rem;
-  border-end-start-radius: 0.5rem;
-}.group\/item:last-child .group-last\/item\:rounded-e-lg {
-  border-start-end-radius: 0.5rem;
-  border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
-}.group\/button:hover .group-hover\/button\:text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
@@ -3093,9 +3052,6 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
-}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -3529,6 +3485,10 @@ video {
     align-items: flex-start;
   }
 
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
   .md\:items-center {
     align-items: center;
   }
@@ -3663,6 +3623,18 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:items-end {
+    align-items: flex-end;
+  }
+
+  .lg\:items-center {
+    align-items: center;
   }
 
   .lg\:bg-transparent {
@@ -3811,6 +3783,18 @@ video {
     flex-direction: row;
   }
 
+  .xl\:items-start {
+    align-items: flex-start;
+  }
+
+  .xl\:items-end {
+    align-items: flex-end;
+  }
+
+  .xl\:items-center {
+    align-items: center;
+  }
+
   .xl\:gap-10 {
     gap: 2.5rem;
   }
@@ -3864,6 +3848,22 @@ video {
   .\32xl\:grid-cols-\[--cols-2xl\] {
     grid-template-columns: var(--cols-2xl);
   }
+
+  .\32xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .\32xl\:items-start {
+    align-items: flex-start;
+  }
+
+  .\32xl\:items-end {
+    align-items: flex-end;
+  }
+
+  .\32xl\:items-center {
+    align-items: center;
+  }
 }.ltr\:hidden:where([dir="ltr"], [dir="ltr"] *) {
   display: none;
 }.ltr\:origin-top-left:where([dir="ltr"], [dir="ltr"] *) {
@@ -3884,9 +3884,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.rtl\:translate-x-1\/2:where([dir="rtl"], [dir="rtl"] *) {
   --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.rtl\:translate-x-1\/4:where([dir="rtl"], [dir="rtl"] *) {
-  --tw-translate-x: 25%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.rtl\:translate-x-full:where([dir="rtl"], [dir="rtl"] *) {
   --tw-translate-x: 100%;
@@ -3989,9 +3986,6 @@ video {
   .\[\@media\(hover\:hover\)\]\:duration-75 {
     transition-duration: 75ms;
   }
-}input:checked+.\[input\:checked\+\&\]\:bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }input:checked+.\[input\:checked\+\&\]\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -3999,15 +3993,6 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}input:checked+.\[input\:checked\+\&\]\:hover\:bg-gray-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}input:checked+.dark\:\[input\:checked\+\&\]\:bg-gray-600:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}input:checked+.dark\:\[input\:checked\+\&\]\:hover\:bg-gray-500:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }input:focus-visible+.\[input\:focus-visible\+\&\]\:z-10 {
   z-index: 10;
 }input:focus-visible+.\[input\:focus-visible\+\&\]\:ring-2 {
